# Metrix3D-Viewer

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  download_imguizmo.cmake  vcpkg.json
.agents/rules/: To-do-List.md
docs/: revision-funcional.md
src/: main.cpp
src/core/: app_settings.hpp  camera.cpp  camera.hpp  datum_entity.cpp  datum_entity.hpp  feature_extraction.cpp  feature_extraction.hpp  kinematic_solver.cpp  kinematic_solver.hpp  material.hpp  math_types.hpp  math_utils.cpp  math_utils.hpp  mesh.cpp  mesh.hpp  scene_manager.cpp  scene_manager.hpp  scene_object.cpp  scene_object.hpp  settings_io.cpp  settings_io.hpp  snap_engine.cpp  snap_engine.hpp  topology_engine.cpp  topology_engine.hpp  transform.hpp  undo_manager.cpp  undo_manager.hpp
src/core/topology/: adjacency_builder.cpp  adjacency_builder.hpp  feature_detector.cpp  feature_detector.hpp  mesh_processor.cpp  mesh_processor.hpp  primitive_analyzer.cpp  primitive_analyzer.hpp  spatial_indexer.cpp  spatial_indexer.hpp
src/render/: renderer.hpp  renderer_core.cpp  renderer_passes.cpp  shader.cpp  shader.hpp
src/render/shaders/: bg_shader.hpp  cap_shader.hpp  solid_shader.hpp
src/ui/: IconsFontAwesome5.h  app_console.hpp  ui_manager.cpp  ui_manager.hpp  ui_state.hpp
src/ui/panels/: ui_panel_explorer.cpp  ui_panel_metrology.cpp  ui_panel_properties.cpp  ui_panel_tools.cpp
src/ui/viewport/: ui_viewport_camera_ctrl.cpp  ui_viewport_camera_ctrl.hpp  ui_viewport_gizmo.cpp  ui_viewport_helpers.hpp  ui_viewport_interaction.cpp  ui_viewport_interaction.hpp  ui_viewport_main.cpp  ui_viewport_overlays.cpp  ui_viewport_snapping.cpp
src/ui/viewport/interaction/: viewport_event.hpp
src/ui/viewport/tools/: ui_viewport_tools.cpp  ui_viewport_tools.hpp
